# ddata-management-workshop

./: README.md
day_1/: redme.md
day_1/03_example/NOMAD-LAB-Template-main/: README.md  docker-compose.plugins.yaml  docker-compose.yaml
day_1/03_example/NOMAD-LAB-Template-main/battery-cycle-parser/: nomad.yaml  pyproject.toml
day_1/03_example/NOMAD-LAB-Template-main/battery-cycle-parser/batterycycleparser/: nomad_plugin.yaml  parser.py  schema.py
day_1/03_example/NOMAD-LAB-Template-main/battery-cycle-parser/tests/data/: test.example.csv
day_1/03_example/NOMAD-LAB-Template-main/configs/: nomad.yaml
